<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@color/colorListBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/sportsImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:background="#8054D266"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_alignBottom="@id/sportsImage"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/genre"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sportsImage"
            android:textColor="?android:textColorSecondary"
            android:padding="8dp"
            android:text="@string/news_placeholder" />

        <TextView
            android:id="@+id/gameBio"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/genre"
            android:padding="8dp"
            android:text="@string/sports_info_placeholder" />

    </RelativeLayout>
</android.support.v7.widget.CardView>